scripts/nullaway/nullgtn/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8.txt
../nullgtn/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/monster/Monster.java:14: error: [NullAway] @NonNull field id not initialized
    private Long id;
                 ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/monster/Monster.java:54: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/RpgObject.java:13: error: [NullAway] @NonNull field name not initialized
    private String name;
                   ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/RpgObject.java:15: error: [NullAway] @NonNull field stats not initialized
    private Stats stats;
                  ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/RpgObject.java:49: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/player/Job.java:68: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/Skill.java:27: error: [NullAway] initializer method does not guarantee @NonNull fields name (line 10), damage (line 18), recovery (line 20), statusEffect (line 22) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Skill(EffectType type) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/Stats.java:8: error: [NullAway] @NonNull field maxHp not initialized
    private Long maxHp;
                 ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/Stats.java:10: error: [NullAway] @NonNull field hp not initialized
    private Long hp;
                 ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/Stats.java:12: error: [NullAway] @NonNull field str not initialized
    private Long str;
                 ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/Stats.java:14: error: [NullAway] @NonNull field def not initialized
    private Long def;
                 ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/Stats.java:16: error: [NullAway] @NonNull field atk not initialized
    private Long atk;
                 ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/Stats.java:18: error: [NullAway] @NonNull field maxMp not initialized
    private Long maxMp;
                 ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/Stats.java:20: error: [NullAway] @NonNull field mp not initialized
    private Long mp;
                 ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/item/Item.java:19: error: [NullAway] initializer method does not guarantee @NonNull fields name (line 13), equipable (line 15), rarity (line 17) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Item() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/player/Player.java:15: error: [NullAway] @NonNull field id not initialized
    private Long id;
                 ^
    (see http://t.uber.com/nullaway )
../nullgtn/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/player/Player.java:17: error: [NullAway] @NonNull field job not initialized
    private Job job;
                ^
    (see http://t.uber.com/nullaway )
17 errors
